--- a/Cinema/Views/Users/SignUp.cshtml
+++ b/Cinema/Views/Users/SignUp.cshtml
@@ -1,8 +1,18 @@
-﻿@model LoginViewModel
+﻿@model SignUpViewModel
+
 
 <div class="container border" style="padding:20px;">
     <form method="post">
         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+        <div class="mb-3 row">
+            <div class="col-2">
+                <label asp-for="@Model.FullName"></label>
+            </div>
+            <div class="col-5">
+                <input type="text" asp-for="@Model.FullName">
+            </div>
+            <span class="text-danger" asp-validation-for="@Model.FullName"></span>
+        </div>
         <div class="mb-3 row">
             <div class="col-2">
                 <label asp-for="@Model.Email"></label>
@@ -14,6 +24,15 @@
         </div>
         <div class="mb-3 row">
             <div class="col-2">
+                <label asp-for="@Model.Phone"></label>
+            </div>
+            <div class="col-5">
+                <input type="text" asp-for="@Model.Phone">
+            </div>
+            <span class="text-danger" asp-validation-for="@Model.Phone"></span>
+        </div>
+        <div class="mb-3 row">
+            <div class="col-2">
                 <label asp-for="@Model.Password"></label>
             </div>
             <div class="col-5">
@@ -21,17 +40,18 @@
             </div>
             <span class="text-danger" asp-validation-for="@Model.Password"></span>
         </div>
-        <div class="row form-check mb-2">
+        <div class="mb-3 row">
             <div class="col-2">
-                <input type="checkbox" asp-for="@Model.RememberMe" class="form-check-input" />
-                <label class="form-check-label" asp-for="@Model.RememberMe"> </label>
+                <label asp-for="@Model.ConfirmPassword"></label>
             </div>
             <div class="col-5">
+                <input type="password" asp-for="@Model.ConfirmPassword">
             </div>
+            <span class="text-danger" asp-validation-for="@Model.ConfirmPassword"></span>
         </div>
         <div class="mb-3 row">
             <div class="col-2">
-                <input type="submit" class="btn btn-primary" value="Login" />
+                <input type="submit" class="btn btn-primary" value="Sign Up" />
             </div>
             <div class="col-5">
             </div>
