--- a/Cinema/Views/Movies/Create.cshtml
+++ b/Cinema/Views/Movies/Create.cshtml
@@ -36,6 +36,11 @@
                         <span asp-validation-for="BreifStory" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
+                        <label asp-for="Price" class="form-control-plaintext"></label>
+                        <input asp-for="Price" class="form-control" />
+                        <span asp-validation-for="Price" class="text-danger"></span>
+                    </div>
+                    <div class="mb-3">
                         <label asp-for="CinemaStart" class="form-control-plaintext"></label>
                         <input asp-for="CinemaStart" class="form-control" />
                         <span asp-validation-for="CinemaStart" class="text-danger"></span>
