--- a/Cinema/Views/Movies/Index.cshtml
+++ b/Cinema/Views/Movies/Index.cshtml
@@ -47,13 +47,14 @@
 
                                 }
                             </p>
+                            <p class="card-text"><b>Price:</b> @item.Price</p>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="card-footer">
                             <div class="card-text">
                                 <a class="btn btn-outline-primary float-end" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye-fill">Show Details</i></a>
-                                <a class="btn btn-success text-white"><i class="bi bi-cart-plus">Add to Cart</i></a>
+                                <a class="btn btn-success text-white" asp-controller="Cart" asp-action="AddToCart" asp-route-movieId="@item.Id"><i class="bi bi-cart-plus">Add to Cart</i></a>
                             </div>
                         </div>
                     </div>
